# peniche

./: Cargo.toml  Peniche.toml  README.md
peniche/: Cargo.toml
peniche-core/: Cargo.toml  README.md
peniche-core/src/: config.rs  lib.rs  log.rs
peniche-core/src/krate/: mod.rs
peniche-core/src/workspace/: mod.rs
peniche/src/: main.rs
