[workspace]
version = "0.1.0"
authors = ["Maxence Koch"]
description = "Manage your rust monorepository"
documentation = "https://github.com/kochmaxence/peniche"
members = [ "peniche","peniche-core"]
resolver = "2"
edition = "2021"

[workspace.dependencies]
git2 = { version = "0.18.3" }
cargo = "0.79.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.83"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
cargo-util = "0.2.11"
toml_edit = "0.22.12"
colored = "2.1.0"
rand = { version = "0.8.5" }
