[package]
name = "peniche"
version = "0.1.0"
edition = "2021"

[dependencies]
peniche-core = { path = "../peniche-core" }
clap = { version = "4.5.4", features = ["derive"] }
indicatif = { version = "0.17.8" }
log = "0.4.21"
env_logger = "0.11.3"
indicatif-log-bridge = "0.2.2"
console = "0.15.8"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace = true }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false